Repairs completed, bugs fixed and functions added

--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
   <body>
     <main>
       <section class="main-container">
-        <div class="decimal-container">
-          <input type="number" id="number-user" min="1" max="8">
+        <div class="decimal-container" action="">
+          <input type="number" id="number-user">
         </div>
-        <button class="converter-container" onclick="converter()">Converter</button>
+        <button class="converter-container" onclick="converter()" type="button">Converter</button>
         <div class="binary-container">
           <div class="show-binary" id="binary"></div>
         </div>
-
         <div class="attribution">
           <p>Proyect made by <a href="https://github.com/michaelviloria">Michael Viloria.</a></p>
         </div>
